fixing input sizes on mobile, updating bio

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -45,6 +45,8 @@
           'email'
           'phone'
           'message';
+
+        grid-template-columns: auto;
       }
     }
 
